[popover] Light dismiss doesn't work on iOS/iPadOS https://bugs.webkit.org/show_bug.cgi?id=267688 rdar://121591037

Reviewed by NOBODY (OOPS!).

We were early returning and skipping `dispatchPointerEventIfNeeded` when there wasn't an event listener.

Per spec, `PointerCaptureController::pointerEventWillBeDispatched` (indirectly called by `dispatchPointerEventIfNeeded`)
is what handles popover light-dismiss, to avoid `event.preventDefault()` from cancelling light-dismiss.

* Source/WebCore/dom/Element.cpp:
(WebCore::Element::dispatchMouseEvent):